--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Visualization - Homework 5 - Exploring the 2018 World Coup </title>
+    <title>Exploring the 2018 World Coup </title>
     <link rel="stylesheet" href="styles.css"/>
     <script src="https://d3js.org/d3.v5.js"></script>
 </head>
@@ -13,7 +13,7 @@
 <div class="container">
     <header>
         <img src="assets/fifa_russia_logo.png" alt="WC Russia Logo" id="logo"/>
-        <h1>Exploring Match Statistics for 2018 World Cup: CS-5630/6630 Homework</h1>
+        <h1>Exploring Match Statistics for 2018 World Cup</h1>
         <div>Name: Yulan Wang; E-Mail: youlan9115@gmail.com; UID: u1264235</div>
     </header>
 
